@@ -1,5 +1,9 @@
 2006-12-11  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/mail.py: stop falling back to importing
+	twisted.protocols.smtp.sendmail, now that we don't need tw-1.3.0
+	support
+
 	* buildbot/twcompat.py (Interface): remove this import
 	* buildbot/*: import Interface from zope.interface directly
 
